Media queries added to avoid text overlapping when device height is very small

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -39,3 +39,16 @@
 		font-size: 2em;
 	}
 }
+
+@media screen and (max-height: 660px) {
+	.title {
+		top: 30% !important;
+	}
+}
+
+@media screen and (max-height: 510px) {
+	.title {
+		top: 25% !important;
+	}
+}
+
